Fix main banner on mobile site.

--- a/resources/css/style-secretagentsupply.css
+++ b/resources/css/style-secretagentsupply.css
@@ -222,6 +222,7 @@ footer {
 
 	.bike-img {
 		height: 15rem;
+		overflow: hidden;
 	}
 
 	/* body*/
